A looooooooooooooooot of tags, removed some forms